fix card input value, overflow changed from styles to class. fix arrow styles of carousel

--- a/styles/index.certificates.css
+++ b/styles/index.certificates.css
@@ -120,6 +120,8 @@
     gap: 20px;
     overflow: hidden;
     min-width: 100%;
+    justify-content: center;
+    align-items: center;
   }
   .certificates__carousel-picture-slides {
     min-width: 100%;
@@ -205,6 +207,7 @@
   }
   .certificates__carousel-picture {
     display: flex;
+    align-items: center;
     transition: transform 0.5s ease-in-out;
     gap: 20px;
   }
